--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">@steevencode</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/steeven509">@steevencode</a>.
     </div>
   </footer>
 </body>
